Added background color

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-  <title>Press</title>
+  <title>Abe's Portfolio</title>
 </head>
+<body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <a class="navbar-brand" href="#"><img src="./images/AirBNBlogo.png" width="155" height="65" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="about_me.html">About Me <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Media Assets</a>
@@ -54,3 +55,5 @@
   </div>
 
 </nav>
+</body>
+</html>
