--- a/about_me.html
+++ b/about_me.html
@@ -12,8 +12,9 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-  <title>Press</title>
+  <title>Abe's Portfolio</title>
 </head>
+<body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <a class="navbar-brand" href="#"><img src="./images/AirBNBlogo.png" width="155" height="65" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,5 +55,6 @@
   </div>
 
 </nav>
+</body>
 
 </html>
