first commit to playlist.html

--- a/playlist.html
+++ b/playlist.html
@@ -24,10 +24,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="about_me.html">About Me <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Main<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="playlist.html">Playlists</a>
+        <a class="nav-link" href="about_me.html">About Me</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Us</a>
@@ -55,5 +55,13 @@
   </div>
 
 </nav>
+  <div class="container py-4 bg-secondary">
+
+      <img src="./images/beyond.png" class="article-image img-responsive">
+      <a href="https://playlists.ibroadcast.com/roObtyutV91" class="text-danger">Beyond Noise</a>
+      <img src="./images/noise.png" class="article-image img-responsive">
+      
+  </div>
 </body>
+
 </html>
