--- a/about_me.html
+++ b/about_me.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="index.html">Main<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Media Assets</a>
+        <a class="nav-link" href="playlist.html">Playlists</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Us</a>
