bachground color gradient

--- a/playlist.html
+++ b/playlist.html
@@ -15,7 +15,7 @@
   <title>Abe's Portfolio</title>
 </head>
 <body id="portfolio">
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#"><img src="./images/AirBNBlogo.png" width="155" height="65" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
       <img src="./images/beyond.png" class="article-image img-responsive">
       <a href="https://playlists.ibroadcast.com/roObtyutV91" class="text-danger">Beyond Noise</a>
       <img src="./images/noise.png" class="article-image img-responsive">
-      
+
   </div>
 </body>
 
