drop logo and add background image

--- a/playlist.html
+++ b/playlist.html
@@ -16,7 +16,6 @@
 </head>
 <body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="./images/logo.png" width="80" height="80" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,13 +35,15 @@
   </div>
 
 </nav>
-  <div class="container py-4 bg-secondary">
+<div id="main">
+  <div class="container py-4">
 
       <img src="./images/beyond.png" class="article-image img-responsive">
       <a href="https://playlists.ibroadcast.com/roObtyutV91" class="text-danger">Beyond Noise</a>
       <img src="./images/noise.png" class="article-image img-responsive">
 
   </div>
+</div>
 </body>
 
 </html>
