--- a/about_me.html
+++ b/about_me.html
@@ -16,7 +16,6 @@
 </head>
 <body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="./images/logo.png" width="80" height="80" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,6 +35,9 @@
   </div>
 
 </nav>
+<div id="main">
+  <p>some content</p>
+</div>
 </body>
 
 </html>
