--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="./images/logo.png" width="80" height="80" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,5 +35,10 @@
   </div>
 
 </nav>
+<div id="main">
+  <div class="container my-5 py-5">
+    <p> Some content</p>
+  </div>
+</div>
 </body>
 </html>
