--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </nav>
 <div id="main">
   <div class="container my-5 py-5">
-    <p> Some content</p>
+    <p class="text-center"> Some content</p>
   </div>
 </div>
 </body>
