--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-link" href="about_me.html">About Me <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="playlist.html">Playlists</a>
+        <a class="nav-link" href="playlist.html">Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Us</a>
@@ -36,8 +36,9 @@
 
 </nav>
 <div id="main">
-  <div class="container my-5 py-5">
-    <p class="text-center"> Some content</p>
+  <div class="container my-5 py-5 text-center">
+    <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
+    <a href="https://www.linkedin.com/in/michael-pearson-237374161/" class="btn btn-primary px-5 mx-5">LinkedIn</a>
   </div>
 </div>
 </body>
