updated to include projects

--- a/playlist.html
+++ b/playlist.html
@@ -16,6 +16,7 @@
 </head>
 <body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light">
+   <a class="navbar-brand" href="#"><h3>Abe's Portfolio Projects</h3></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -35,14 +36,39 @@
   </div>
 
 </nav>
-<div id="main">
-  <div class="container py-4">
-
-      <img src="./images/beyond.png" class="article-image img-responsive">
-      <a href="https://playlists.ibroadcast.com/roObtyutV91" class="text-danger">Beyond Noise</a>
-      <img src="./images/noise.png" class="article-image img-responsive">
-
+<div id="main" class="pt-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-9 img-responsive">
+        <img src="./images/AirBNBPreview.png" width="100%"/>
+      </div>
+      <div class="col-3">
+        <h3><a href="https://musing-goldberg-28d002.netlify.app" class="text-center portfolio-text">AirBNB Clone</a></h3>
+      </div>
+    </div>
+      <br>
+      <br>
+    <div class="row align-items-center">
+      <div class="col-3 mt-5">
+        <h3><a href="https://trusting-ramanujan-b16924.netlify.app" class="text-center portfolio-text">Newsweek Clone</a></h3>
+      </div>
+      <div class="col-9 img-responsive px-4">
+        <img src="./images/Newsweek.png" width="100%"/>
+      </div>
+    </div>
   </div>
+
+    <br>
+    <br>
+    <div class="row align-items-center">
+      <div class="col-9 img-responsive">
+        <img src="./images/Apple.png" width="100%"/>
+      </div>
+      <div class="col-3">
+        <h3><a href="https://tender-bartik-c41985.netlify.app" class="text-center portfolio-text">Apple Clone</a></h3>
+      </div>
+    </div>
+
 </div>
 </body>
 
