--- a/playlist.html
+++ b/playlist.html
@@ -60,7 +60,7 @@
 
     <br>
     <br>
-    <div class="row align-items-center">
+    <div class="row align-items-center ml-5">
       <div class="col-9 img-responsive">
         <img src="./images/Apple.png" width="100%"/>
       </div>
