--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   <title>Abe's Portfolio</title>
 </head>
-<body id="portfolio">
+<body id="portfolio" class="background">
 <nav class="navbar navbar-expand-lg navbar-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
