--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <title>Abe's Portfolio</title>
 </head>
 <body id="portfolio" class="background">
-<nav class="navbar navbar-expand-lg navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-light">
+  <a class="navbar-brand" href="#"><h3>Stylesheet</h3></a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="about_me.html">About Me <span class="sr-only">(current)</span></a>
@@ -28,18 +26,13 @@
       <li class="nav-item">
         <a class="nav-link" href="playlist.html">Portfolio</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
-      </li>
     </ul>
   </div>
 
+
 </nav>
-<div id="main">
-  <div class="container my-5 py-5 text-center">
-    <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
-    <a href="https://www.linkedin.com/in/michael-pearson-237374161/" class="btn btn-primary px-5 mx-5">LinkedIn</a>
-  </div>
-</div>
+
+
+
 </body>
 </html>
