--- a/about_me.html
+++ b/about_me.html
@@ -16,27 +16,33 @@
 </head>
 <body id="portfolio">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a class="navbar-brand" href="#"><h3>About Me</h3></a>
+
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Main<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="playlist.html">Portfolio<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="playlist.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="index.html">Stylesheet</a>
       </li>
     </ul>
   </div>
 
 </nav>
-<div id="main">
-  <p>some content</p>
+<div class="container my-5 py-5 text-center">
+  <div class=row>
+    <div class="col-4">
+      <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
+    </div>
+    <div class="col-4">
+      <a href="https://www.linkedin.com/in/michael-pearson-237374161/" class="btn btn-primary px-5 mx-5">LinkedIn</a>
+    </div>
+    <div class="col-4">
+      <a href="https://app.netlify.com/teams/mapearson/overview?_ga=2.24025081.233080594.1645210106-978751675.1644260866" class="btn btn-primary px-5 mx-5">Netify</a>
+    </div>
+</div>
 </div>
 </body>
 
