--- a/playlist.html
+++ b/playlist.html
@@ -24,13 +24,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Main<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="about_me.html">About Me<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about_me.html">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="index.html">Stylesheet</a>
       </li>
     </ul>
   </div>
