added visual image

--- a/about_me.html
+++ b/about_me.html
@@ -31,7 +31,10 @@
   </div>
 
 </nav>
-<div class="container my-5 py-5 text-center">
+<div class="d-flex justify-content-center mt-3">
+  <img src="./images/delicate_arch_sunset_rock.jpg" width="66%" height="500px"/>
+</div>
+<div class="container py-3 text-center" position="relative">
   <div class=row>
     <div class="col-4">
       <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
