--- a/about_me.html
+++ b/about_me.html
@@ -32,10 +32,11 @@
   </div>
 
 </nav>
-<div class="d-flex justify-content-center mt-3">
+<div class="d-flex justify-content-center mt-3" id="about_me">
   <img src="./images/delicate_arch_sunset_rock.jpg" width="66%" height="500px"/>
+  <div class="centered"><h3><u>Michael Pearson</u></h3><h4>Full-Stack Developer<h4></div>
 </div>
-<div class="container py-3 text-center" position="relative">
+<div class="container py-3 text-center overlap" position="relative">
   <div class=row>
     <div class="col-4">
       <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
