--- a/about_me.html
+++ b/about_me.html
@@ -45,7 +45,7 @@
       <a href="https://www.linkedin.com/in/michael-pearson-237374161/" class="btn btn-primary px-5 mx-5">LinkedIn</a>
     </div>
     <div class="col-4">
-      <a href="https://app.netlify.com/teams/mapearson/overview?_ga=2.24025081.233080594.1645210106-978751675.1644260866" class="btn btn-primary px-5 mx-5">Netify</a>
+      <a href="https://app.netlify.com/teams/mapearson/overview?_ga=2.24025081.233080594.1645210106-978751675.1644260866" class="btn btn-primary px-5 mx-5">Netlify</a>
     </div>
 </div>
 </div>
