--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <html lang="en">
 <head>
   <!-- Required meta tags -->
@@ -14,29 +17,72 @@
     />
   <title>Abe's Portfolio</title>
 </head>
-<body id="portfolio" class="background">
+<body id="portfolio">
 <nav class="navbar navbar-light">
-  <a class="navbar-brand" href="#"><h3>Stylesheet</h3></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <a class="navbar-brand" href="#"><h3>Abe's Portfolio Project</h3></a>
+  <div>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="about_me.html">About Me <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="playlist.html">Portfolio</a>
+        <a class="nav-link" href="about_me.html">About Me<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
 
-
 </nav>
+<div class="d-flex justify-content-center mt-3" id="about_me">
+  <img src="./images/delicate_arch_sunset_rock.jpg" width="66%" height="500px"/>
+  <div class="centered"><h3><u>Michael Pearson</u></h3><h4>Full-Stack Developer<h4></div>
+</div>
+<div class="container py-3 text-center overlap" position="relative">
+  <div class=row>
+    <div class="col-4">
+      <a href="https://github.com/abepeterson" class="btn btn-primary px-5 mx-5">GITHUB</a>
+    </div>
+    <div class="col-4">
+      <a href="https://www.linkedin.com/in/michael-pearson-237374161/" class="btn btn-primary px-5 mx-5">LinkedIn</a>
+    </div>
+    <div class="col-4">
+      <a href="https://app.netlify.com/teams/mapearson/overview?_ga=2.24025081.233080594.1645210106-978751675.1644260866" class="btn btn-primary px-5 mx-5">Netlify</a>
+    </div>
+</div>
+</div>
+<div id="main" class="pt-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-9 img-responsive">
+        <img src="./images/AirBNBPreview.png" width="100%"/>
+      </div>
+      <div class="col-3">
+        <h3><a href="https://musing-goldberg-28d002.netlify.app" class="text-center portfolio-text">AirBNB Clone</a></h3>
+      </div>
+    </div>
+      <br>
+      <br>
+    <div class="row align-items-center">
+      <div class="col-3 mt-5">
+        <h3><a href="https://trusting-ramanujan-b16924.netlify.app" class="text-center portfolio-text">Newsweek Clone</a></h3>
+      </div>
+      <div class="col-9 img-responsive px-4">
+        <img src="./images/Newsweek.png" width="100%"/>
+      </div>
+    </div>
+  </div>
 
+    <br>
+    <br>
+    <div class="row align-items-center ml-5">
+      <div class="col-9 img-responsive">
+        <img src="./images/Apple.png" width="100%"/>
+      </div>
+      <div class="col-3">
+        <h3><a href="https://tender-bartik-c41985.netlify.app" class="text-center portfolio-text">Apple Clone</a></h3>
+      </div>
+    </div>
+
+  </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
 </body>
+
 </html>
